# ecn_2023

ecn_2023/: CMakeLists.txt  package.xml  uav.cpp
ecn_2023/include/ecn_2023/: client_spinner.h
ecn_2023/launch/: world.rviz  world_launch.py
ecn_2023/src/: uav_sim.py  uav_target.cpp
ecn_2023/srv/: Target.srv
ecn_2023/urdf/: Readme.md
ecn_2023/urdf/uav/: drone.urdf.xacro
ecn_2023/urdf/world/: MangaliaTerrain.dae  world.xacro
ecn_usv/: CMakeLists.txt  package.xml
ecn_usv/launch/: usv_launch.py
ecn_usv/src/: trajectory.py  usv_sim.py
ecn_usv/srv/: Target.srv
ecn_usv/urdf/: Readme.md  blades.dae  hull.dae  support.dae  usv.xacro
subject/: ecn_2023.tex
